--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,74 +1,108 @@
-name: build
-permissions:
-  contents: "read"
-  id-token: "write"
-  packages: "write"
+name: Bygg, publish og deploy
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
-
 env:
-  IMAGE: ghcr.io/${{ github.repository }}:${{ github.sha }}
+  APP: medlemskap-oppslag-pdfgen
 jobs:
-  build_and_push:
+  build-and-publish:
+    name: Bygg, test og push Docker image
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: test and build
-        uses: actions/setup-java@v4.2.1
-        with:
-          distribution: 'temurin'
-          java-version: '20'
-          check-latest: true
-      - run: ./gradlew test shadowJar
-        env:
-          ORG_GRADLE_PROJECT_githubUser: x-access-token
-          ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
-      - uses: nais/docker-build-push@v0
-        id: docker-push
-        with:
-          team: medlemskap # required
-          project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }} # required, but is defined as an organization variable
-          identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }} # required, but is defined as an organization secret
-      - name: Post failures to Slack
-        if: failure()
+      - name: Checkout code
+        uses: actions/checkout@v1
+      - name: Generer versjon og image navn
         run: |
-          curl -X POST --data-urlencode "payload={\"channel\": \"$CHANNEL\", \"text\": \"$MESSAGE\", \"icon_emoji\": \":ghost:\"}" $WEBHOOK_URL
+          TIME=$(TZ="Europe/Oslo" date +%Y.%m.%d-%H.%M)
+          COMMIT=$(git rev-parse --short=8 HEAD)
+          VERSION=$TIME-$COMMIT
+          echo "IMAGE=docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:$VERSION" >> $GITHUB_ENV
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+      - run: echo $VERSION > VERSION.txt
+      - name: Last opp VERSION til neste job
+        uses: actions/upload-artifact@v4
+        with:
+          name: VERSION.txt
+          path: VERSION.txt
+      - name: Build and publish Docker image
         env:
-          MESSAGE: "Bygg feilet"
-          CHANNEL: "#team-p3-medlemskap-notifications"
-          WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
-    outputs:
-      image: ${{ steps.docker-push.outputs.image }}
-  deploypreprod:
-    name: Deploy to Preprod
-    needs: build_and_push
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          docker build -t ${IMAGE} .
+          docker login docker.pkg.github.com -u ${GITHUB_REPOSITORY} -p ${GITHUB_TOKEN}
+          docker push ${IMAGE}
+
+  deploy-to-dev-gcp:
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/dev-')
+    name: Deploy til dev-gcp (Q1)
     runs-on: ubuntu-latest
+    needs: build-and-publish
     steps:
-      - uses: actions/checkout@v4
-      - uses: nais/deploy/actions/deploy@v2
+      - name: Checkout code
+        uses: actions/checkout@v1
+      - name: Last ned versjon
+        uses: actions/download-artifact@v4.1.7
+        with:
+          name: VERSION.txt
+          path: .
+      - run: echo "VERSION=`cat VERSION.txt`" >> $GITHUB_ENV
+      - run: echo "IMAGE=docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:$VERSION" >> $GITHUB_ENV
+      - uses: nais/deploy/actions/deploy@v1
+        name: Deploy to dev-gcp
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
           RESOURCE: nais/naiserator.yaml
           VARS: nais/dev-gcp.json
-          IMAGE: ${{ needs.build_and_push.outputs.image }}
-          TELEMETRY: ${{ needs.build_and_push.outputs.telemetry }}
-  prod:
-    name: Deploy to Prod
-    needs: build_and_push
+
+  deploy-to-prod-gcp:
     if: github.ref == 'refs/heads/main'
+    name: Deploy til prod-gcp (Produksjon)
     runs-on: ubuntu-latest
+    needs: build-and-publish
     steps:
-      - uses: actions/checkout@v4
-        name: Checkout code
-      - uses: nais/deploy/actions/deploy@v2
+      - name: Checkout code
+        uses: actions/checkout@v1
+      - name: Last ned versjon
+        uses: actions/download-artifact@v4.1.7
+        with:
+          name: VERSION.txt
+          path: .
+      - run: echo "VERSION=`cat VERSION.txt`" >> $GITHUB_ENV
+      - run: echo "IMAGE=docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:$VERSION" >> $GITHUB_ENV
+      - uses: nais/deploy/actions/deploy@v1
+        name: Deploy to prod-gcp
         env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_API_KEY }}
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-gcp
           RESOURCE: nais/naiserator.yaml
           VARS: nais/prod-gcp.json
-          IMAGE: ${{ needs.build_and_push.outputs.image }}
-          TELEMETRY: ${{ needs.build_and_push.outputs.telemetry }}
+
+  tag-image-as-latest:
+    if: github.ref == 'refs/heads/main'
+    name: Tag dockerimage as latest
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+    needs: build-and-publish
+    steps:
+      - name: Last ned versjon
+        uses: actions/download-artifact@v4.1.7
+        with:
+          name: VERSION.txt
+          path: .
+      - run: echo "VERSION=`cat VERSION.txt`" >> $GITHUB_ENV
+      - run: echo "IMAGE=docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:$VERSION" >> $GITHUB_ENV
+      - run: echo "LATEST=docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:latest" >> $GITHUB_ENV
+      - name: Tag and push docker image
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          docker login docker.pkg.github.com -u ${GITHUB_REPOSITORY} -p ${GITHUB_TOKEN}
+          docker pull ${IMAGE}
+          docker tag ${IMAGE} ${LATEST}
+          docker push ${LATEST}
