--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -35,6 +35,8 @@ jobs:
           docker build -t ${IMAGE} .
           docker login docker.pkg.github.com -u ${GITHUB_REPOSITORY} -p ${GITHUB_TOKEN}
           docker push ${IMAGE}
+    outputs:
+      image: ${{ steps.docker-push.outputs.image }}
 
   deploy-to-dev-gcp:
     if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/dev-')
@@ -42,22 +44,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-publish
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v1
-      - name: Last ned versjon
-        uses: actions/download-artifact@v4.1.7
-        with:
-          name: VERSION.txt
-          path: .
-      - run: echo "VERSION=`cat VERSION.txt`" >> $GITHUB_ENV
-      - run: echo "IMAGE=docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:$VERSION" >> $GITHUB_ENV
-      - uses: nais/deploy/actions/deploy@v1
-        name: Deploy to dev-gcp
+      - uses: actions/checkout@v4
+      - uses: nais/deploy/actions/deploy@v2
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: dev-gcp
+          CLUSTER: dev-fss
           RESOURCE: nais/naiserator.yaml
           VARS: nais/dev-gcp.json
+          IMAGE: ${{ needs.build_and_push.outputs.image }}
+          TELEMETRY: ${{ needs.build_and_push.outputs.telemetry }}
 
   deploy-to-prod-gcp:
     if: github.ref == 'refs/heads/main'
@@ -65,44 +60,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-publish
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v1
-      - name: Last ned versjon
-        uses: actions/download-artifact@v4.1.7
-        with:
-          name: VERSION.txt
-          path: .
-      - run: echo "VERSION=`cat VERSION.txt`" >> $GITHUB_ENV
-      - run: echo "IMAGE=docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:$VERSION" >> $GITHUB_ENV
-      - uses: nais/deploy/actions/deploy@v1
-        name: Deploy to prod-gcp
+      - uses: actions/checkout@v4
+        name: Checkout code
+      - uses: nais/deploy/actions/deploy@v2
         env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: prod-gcp
+          APIKEY: ${{ secrets.NAIS_DEPLOY_API_KEY }}
+          CLUSTER: prod-fss
           RESOURCE: nais/naiserator.yaml
           VARS: nais/prod-gcp.json
-
-  tag-image-as-latest:
-    if: github.ref == 'refs/heads/main'
-    name: Tag dockerimage as latest
-    runs-on: ubuntu-latest
-    permissions:
-      packages: write
-    needs: build-and-publish
-    steps:
-      - name: Last ned versjon
-        uses: actions/download-artifact@v4.1.7
-        with:
-          name: VERSION.txt
-          path: .
-      - run: echo "VERSION=`cat VERSION.txt`" >> $GITHUB_ENV
-      - run: echo "IMAGE=docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:$VERSION" >> $GITHUB_ENV
-      - run: echo "LATEST=docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:latest" >> $GITHUB_ENV
-      - name: Tag and push docker image
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          docker login docker.pkg.github.com -u ${GITHUB_REPOSITORY} -p ${GITHUB_TOKEN}
-          docker pull ${IMAGE}
-          docker tag ${IMAGE} ${LATEST}
-          docker push ${LATEST}
+          IMAGE: ${{ needs.build_and_push.outputs.image }}
+          TELEMETRY: ${{ needs.build_and_push.outputs.telemetry }}
