endrer på url til isAlive og IsReady

--- a/nais/naiserator.yaml
+++ b/nais/naiserator.yaml
@@ -21,13 +21,13 @@ spec:
     max: 4
     cpuThresholdPercentage: 70
   liveness:
-    path: /is_alive
+    path: /internal/is_alive
     timeout: 1
     initialDelay: 5
     periodSeconds: 5
     failureThreshold: 30
   readiness:
-    path: /is_alive
+    path: /internal/is_ready
     timeout: 1
     initialDelay: 5
     periodSeconds: 5
